--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>  
 <html>
 <head>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
     <title>Blockchain visualisation</title>
 	
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="js/vivagraph.js"></script>  
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="js/vivagraph.js"></script>  
     <script type="text/javascript" src="js/webgl-programs.js"></script>  
     <style>
     body{
